Subida inicial dashboard

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,34 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+.simple-container{
+    border: 1px solid #AFAFAF;
+    background-color: white;
+    border-radius: 20px;
+    padding: 20px;
+}
+
+.principal-text-color{
+    color: #012F4A;
+}
+.principal-button{
+    background-color: #FF7E13;
+    color: white;
+    font-weight: 500;
+
+    border-radius: 10px;
+    padding: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.card-title{
+    font-size: 20px;
+}
+
+
+@media(min-width: 768px) {
+    
+}
