--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -19,13 +19,26 @@
 .principal-text-color{
     color: #012F4A;
 }
-/* .principal-button */
+
+
 .btn-primary{
     @apply bg-[#FF7E13] text-white rounded-lg p-2 font-semibold flex items-center justify-center cursor-pointer gap-2;
 }
-.btn-primary:hover{
 
+.btn-primary:hover{
+    @apply bg-[#FE712B] transition-all
 }
+
+
+
+.list-option{
+    @apply p-2 rounded-lg mb-2 text-[#012F4A] flex flex-row items-center justify-between w-full
+}
+.list-option:hover{
+    @apply bg-[#fef5eb] text-[#FF7E13]
+}
+
+
 .card-title{
     font-size: 20px;
 }
