--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -21,6 +21,26 @@
 }
 
 
+
+
+
+.list-option{
+    @apply p-2 rounded-lg mb-2 text-[#012F4A] flex flex-row items-center justify-between w-full;
+}
+.list-option:hover{
+    @apply bg-[#fef5eb] text-[#FF7E13];
+}
+
+
+.card-title{
+    font-size: 20px;
+}
+
+.title{
+    @apply text-3xl font-bold text-[#011020] mb-7;
+}
+
+/* Buttons */
 .btn-primary{
     @apply bg-[#FF7E13] text-white rounded-lg p-2 font-semibold flex items-center justify-center cursor-pointer gap-2;
 }
@@ -32,23 +52,22 @@
 .btn-secondary{
     @apply bg-white text-[#011020] rounded-lg p-2 font-semibold flex items-center justify-center cursor-pointer gap-2 border-1 border-[#AFAFAF];
 }
-
-
-.list-option{
-    @apply p-2 rounded-lg mb-2 text-[#012F4A] flex flex-row items-center justify-between w-full
-}
-.list-option:hover{
-    @apply bg-[#fef5eb] text-[#FF7E13]
+.is-active-button{
+    @apply border-1 bg-green-200 text-green-600 border-green-600 rounded-lg p-2;
 }
 
-
-.card-title{
-    font-size: 20px;
+.is-inactive-button{
+    @apply border-1 bg-red-200 text-red-600 border-red-600 rounded-lg p-2;
 }
 
-.title{
-    @apply text-3xl font-bold text-[#011020] mb-7
+.deactivate-button{
+    @apply  text-white bg-red-600 rounded-lg p-2 cursor-pointer;
 }
+
+.activate-button{
+    @apply  text-white bg-green-600 rounded-lg p-2 cursor-pointer;
+}
+
 
 @media(min-width: 768px) {
     
