--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -28,6 +28,13 @@
     @apply bg-[#fef5eb] text-[#FF7E13];
 }
 
+.menu-option{
+    @apply p-2 rounded-lg mb-2 text-[#0F172A] flex flex-row items-center justify-start w-full;
+}
+.menu-option:hover{
+    @apply bg-[#fef5eb] text-[#FF7E13];
+}
+
 
 .card-title{
     font-size: 20px;
@@ -54,6 +61,11 @@
 
 .menu-text{
     @apply text-[#0F172A] ml-4;
+}
+
+.menu-option:hover .menu-text{
+    @apply bg-[#fef5eb] text-[#FF7E13];
+
 }
 
 .btn-secondary{
