--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -33,6 +33,10 @@
     @apply bg-[#fef5eb] text-[#FF7E13];
 }
 
+.menu-option-selected{
+    @apply p-2 rounded-lg mb-2  flex flex-row items-center justify-start w-full bg-[#fef5eb] text-[#FF7E13];
+}
+
 
 .card-title{
     font-size: 20px;
@@ -61,7 +65,7 @@
 }
 
 .menu-text{
-    @apply text-[#0F172A] ml-4;
+    @apply ml-4;
 }
 
 .menu-option:hover .menu-text{
