--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -12,11 +12,11 @@
 
 /* Estilos del menu */
 .menu-option{
-    @apply p-2 rounded-lg mb-2 flex flex-row items-center justify-start w-full text-[#0F172A] hover:bg-[#fef5eb] hover:text-[#FF7E13];
+    @apply p-2 rounded-lg mb-2 flex flex-row items-center justify-start w-full text-[#0F172A] hover:bg-[#fef5eb] hover:text-[#FF7E13] transition-all dark:text-slate-500 dark:hover:bg-slate-700;
 }
 
 .menu-option-selected{
-    @apply p-2 rounded-lg mb-2 flex flex-row items-center justify-start w-full bg-[#fef5eb] text-[#FF7E13];
+    @apply p-2 rounded-lg mb-2 flex flex-row items-center justify-start w-full bg-[#fef5eb] text-[#FF7E13] dark:bg-slate-700;
 }
 
 .menu-text{
@@ -24,7 +24,7 @@
 }
 
 .menu-option:hover .menu-text{
-    @apply ml-4 hover:bg-[#fef5eb] hover:text-[#FF7E13];
+    @apply ml-4 hover:text-[#FF7E13];
 
 }
 /* Notifications */
@@ -67,6 +67,15 @@
 .rich-editor-container * {
     all : revert;
     margin: 2px;
+}
+
+/* Tabla */
+.tableContainer {
+    @apply border border-[#AFAFAF] rounded-lg mt-10 overflow-x-auto border-b
+}
+
+.tableContainer tbody tr:last-child {
+    @apply border-b-0
 }
 
 /* 
