--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,5 +1,11 @@
 @import 'tailwindcss';
+@custom-variant light (&:where(:not(.dark), :not(.dark) *));
+@custom-variant dark (&:where(.dark, .dark *));
 
+
+@theme {
+  --color-neutral-850: #1b1b1b;
+}
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
@@ -12,11 +18,11 @@
 
 /* Estilos del menu */
 .menu-option{
-    @apply p-2 rounded-lg mb-2 flex flex-row items-center justify-start w-full text-[#0F172A] hover:bg-[#fef5eb] hover:text-[#FF7E13] transition-all dark:text-slate-500 dark:hover:bg-slate-700;
+    @apply p-2 rounded-lg mb-2 flex flex-row items-center justify-start w-full text-[#0F172A] hover:bg-[#fef5eb] hover:text-[#FF7E13] transition-all dark:text-neutral-300 dark:hover:bg-neutral-700;
 }
 
 .menu-option-selected{
-    @apply p-2 rounded-lg mb-2 flex flex-row items-center justify-start w-full bg-[#fef5eb] text-[#FF7E13] dark:bg-slate-700;
+    @apply p-2 rounded-lg mb-2 flex flex-row items-center justify-start w-full bg-[#fef5eb] text-[#FF7E13] dark:bg-neutral-700;
 }
 
 .menu-text{
@@ -50,13 +56,13 @@
     @apply opacity-50
 }
 .dragStartleft{
-    @apply bg-green-50 border-4 border-dashed border-green-600 
+    @apply bg-green-50 dark:bg-green-200 border-4 border-dashed border-green-600 
 }
 .dragStartRight > :not(.information-drop){
     @apply opacity-50
 }
 .dragStartRight{
-    @apply bg-red-50 border-4 border-dashed border-red-600
+    @apply bg-red-50 dark:bg-red-200 border-4 border-dashed border-red-600
 }
 
 /* Rich editor */
