--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,6 +11,10 @@
 @source '../**/*.blade.php';
 @source '../**/*.js';
 
+*{
+    @apply transition-colors duration-500
+}
+
 @theme {
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
