test variables css

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -189,5 +189,15 @@
 }
 
 :root {
-    --test: #999999;
+    --c50: #f2f2f2; /* no se usa */
+    --c100: #e6e6e6; /* no se usa */
+    --c200: #cccccc; /* no se usa */
+    --c300: #0F172A;
+    --c400: ;
+    --c500: ;
+    --c600: ;
+    --c700: ;
+    --c800: ;
+    --c900: ;
+    --c950: ;
 }
