--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -23,7 +23,7 @@
 
 /* Estilos del menu */
 .menu-option{
-    @apply p-2 rounded-lg mb-2 flex flex-row items-center justify-start w-full text-[#0F172A] hover:bg-[#fef5eb] hover:text-[#FF7E13] transition-all dark:text-neutral-300 dark:hover:bg-neutral-700 other:text(--c300) other:hover:bg-(--c700);
+    @apply p-2 rounded-lg mb-2 flex flex-row items-center justify-start w-full text-[#0F172A] hover:bg-[#fef5eb] hover:text-[#FF7E13] transition-all dark:text-neutral-300 dark:hover:bg-neutral-700 other:text-(--c300) other:hover:bg-(--c700);
 }
 
 .menu-option-selected{
