--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -215,8 +215,19 @@
 */
 
 
-@media(min-width: 768px) {
-    
+#sidebar *, #sidebar{
+    @apply transition-all duration-500
+}
+
+@media(max-height: 780px) {
+    #sidebar ul{
+        @apply gap-2
+    }
+}
+@media(max-height: 735px) {
+    #sidebar ul{
+        @apply gap-1
+    }
 }
 
 :root {
